--- a/client/style.css
+++ b/client/style.css
@@ -9,7 +9,9 @@
 /* POPUP STYLE */
 .popup {
   background-color: #ffff;
-  width: 450px;
+  width: 400px;
+  margin-left: 8%;
+  margin-right: 8%;
   padding: 30px 40px;
   position: absolute;
   top: 50%;
