popup added with functionality

--- a/client/style.css
+++ b/client/style.css
@@ -9,7 +9,7 @@
 /* POPUP STYLE */
 .popup {
   background-color: #ffff;
-  width: 400px;
+  width: 350px;
   padding: 30px 40px;
   position: absolute;
   top: 50%;
@@ -17,6 +17,11 @@
   transform: translate(-50%, -50%);
   border-radius: 8px;
   display: none;
+}
+h2 {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 .popup__close {
   position: absolute;
