--- a/client/style.css
+++ b/client/style.css
@@ -97,6 +97,20 @@ i.fa-solid.fa-robot {
   background-color: #2c74b3;
   transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
+.loveContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 1rem;
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+.love{
+  color: #2c74b3;
+  margin-top: 0.5rem;
+  text-decoration: none;
+}
 
 /* .popup__content {
   text-align: center;
@@ -117,13 +131,15 @@ i.fa-solid.fa-robot {
 } */
 
 body {
-  background: #0a2647;
+  /* background: #0a2647; */
+  background: #665A48;
 }
 
 #app {
   width: 100vw;
   height: 100vh;
-  background: #0a2647;
+  /* background: #0a2647; */
+  background: #665A48;
 
   display: flex;
   flex-direction: column;
@@ -159,7 +175,7 @@ body {
 }
 
 .ai {
-  background: #2c74b3;
+  background: #9F8772;
 }
 
 .chat {
@@ -224,7 +240,8 @@ form {
   max-width: 1280px;
   margin: 0 auto;
   padding: 10px;
-  background: #144272;
+  background: #9F8772;
+  border-radius: 10px;
 
   display: flex;
   flex-direction: row;
